--- a/platform_android_2/YESSDuckDerby/app/src/main/AndroidManifest.xml
+++ b/platform_android_2/YESSDuckDerby/app/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name=".MainActivity"
+            android:name="org.yessiowa.duckderby.teamduck.game.MainActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -16,10 +16,12 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".Game"
+            android:name="org.yessiowa.duckderby.teamduck.game.Game"
             android:label="@string/title_activity_game" >
         </activity>
     </application>
+
+
 
     <!--<uses-permission android:name="android.permission.INTERNET" />-->
 
