renamed DuckDerby3 to DuckDerby

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,21 @@
 .idea/*
+
+platform_android_2/.idea/.name
+
+platform_android_2/.idea/compiler.xml
+
+platform_android_2/.idea/encodings.xml
+
+platform_android_2/.idea/copyright/profiles_settings.xml
+
+platform_android_2/.idea/modules.xml
+
+platform_android_2/.idea/scopes/scope_settings.xml
+
+platform_android_2/.idea/workspace.xml
+
+platform_android_2/.idea/vcs.xml
+
+platform_android_2/.idea/platform_android_2.iml
+
+platform_android_2/.idea/misc.xml
